--- a/rpmsg_lite_pingpong_rtos_cm0plus.uvprojx
+++ b/rpmsg_lite_pingpong_rtos_cm0plus.uvprojx
@@ -10,6 +10,7 @@
       <TargetName>rpmsg_lite_pingpong_rtos_cm0plus debug</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>6190000::V6.19::ARMCLANG</pCCUsed>
       <uAC6>1</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -755,9 +756,19 @@
               <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/port.c</FilePath>
             </File>
             <File>
+              <FileName>portasm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/portasm.c</FilePath>
+            </File>
+            <File>
               <FileName>portmacro.h</FileName>
               <FileType>5</FileType>
               <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/portmacro.h</FilePath>
+            </File>
+            <File>
+              <FileName>portasm.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/portasm.h</FilePath>
             </File>
           </Files>
         </Group>
@@ -2072,9 +2083,19 @@
               <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/port.c</FilePath>
             </File>
             <File>
+              <FileName>portasm.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/portasm.c</FilePath>
+            </File>
+            <File>
               <FileName>portmacro.h</FileName>
               <FileType>5</FileType>
               <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/portmacro.h</FilePath>
+            </File>
+            <File>
+              <FileName>portasm.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>freertos/freertos-kernel/portable/GCC/ARM_CM0/portasm.h</FilePath>
             </File>
           </Files>
         </Group>
